<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.sleepcare.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_monitoring"
            app:destination="@id/monitoringFragment" />
        <action
            android:id="@+id/action_home_to_report"
            app:destination="@id/reportFragment" />
    </fragment>

    <fragment
        android:id="@+id/monitoringFragment"
        android:name="com.example.sleepcare.ui.monitoring.MonitoringFragment"
        android:label="@string/monitoring_title"
        tools:layout="@layout/fragment_monitoring">
        <action
            android:id="@+id/action_monitoring_to_report"
            app:destination="@id/reportFragment" />
    </fragment>

    <fragment
        android:id="@+id/reportFragment"
        android:name="com.example.sleepcare.ui.report.ReportFragment"
        android:label="@string/report_title"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.sleepcare.ui.history.HistoryFragment"
        android:label="@string/history_title"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_history_to_report"
            app:destination="@id/reportFragment" />
    </fragment>

</navigation>
